<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mainLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_or_retrieve"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/key"
            android:padding="10dp"
            android:layout_weight="4"
            android:gravity="center"/>

        <EditText
            android:id="@+id/keyInput"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/key_input"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:padding="10dp"
            android:layout_weight="4"
            android:gravity="center"/>

        <EditText
            android:id="@+id/valueInput"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value_input"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:padding="10dp"
            android:layout_weight="4"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/typeSelector"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_type"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|end">

        <Button
            android:id="@+id/getValueBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_value"/>

        <Button
            android:id="@+id/setValueBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_value"
            android:padding="10dp"
            android:gravity="center"/>

    </LinearLayout>

    <View
        android:id="@+id/colorTest"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

</LinearLayout>
